--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset = "utf - 8">
     <meta name = "viewport" content = "width = device-width,initial - scale = 1.0">
      <title>いのちのフォトコンテスト</title>
-     <link rel = "stylesheet" href = "stylesheet8.css">
-    <link rel = "stylesheet" href = "responsive8.css">
+     <link rel = "stylesheet" href = "stylesheet000.css">
+    <link rel = "stylesheet" href = "responsive.css">
      <script src =
 'https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
       <lin rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -63,7 +63,7 @@
     <div class = "footer-right"><a href = "https://hiro-eng.github.io/newteck/" style="text-decoration:none;">>>>Teck-Teck Worldへ</a></div>
     　</div>
             </footer>
-        <script src = "script8.js"></script>
+        <script src = "script000.js"></script>
 
 
         </body></html>
