--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class = "heading">
       <h2>あなたが撮影した、素敵な写真を送ってください。</h2>
    </div>
-   <div class = "box1"><p><b>>>>概要</b><br>■「いのちの相談窓口」では
+   <div class = "box1"><p><b>>>>概要</b><br>「いのちの相談窓口」では
   皆様からの癒しの写真を募集し、入賞者には賞品を差し上げます。そして、
   入賞作品は「いのちの相談窓口」のテーマ画像とさせて頂き、ホームページなどで使用します。</div>
 
