--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
   入賞作品は「いのちの相談窓口」のテーマ画像とさせて頂き、ホームページなどで使用します。</div>
 
 <div class = "box2"><p><b>>>>日程</b><br>3か月にわたって開催します。
-  第一回締め切りは１月末日。第二回締め切りは２月末日。第三回締め切りは３月末日。月ごとの入賞者数は、応募総数により決めさせて頂きます。<br>
-  「賞品」クオカード５０００円分（もしくは現金５０００円。）</div>
+  第一回締め切りは<b>２０２０年１２月２５日。</b>第二回締め切りは１月末日。第三回締め切りは２月末日。月ごとの入賞者数は、応募総数により決めさせて頂きます。<br>
+  「賞品」クオカード３０００円分か５０００円分（もしくは同額現金）</div>
 
-<div class = "box3"><p><b>>>>応募方法</b><br>メールに添付、もしくはtwitterからDMにてお送りください。写真とともに、お名前（ニッネーム可）をお書きください。（入賞時賞品発送の際には、本名・住所・電話番号をお聞きします）</p>
+<div class = "box3"><p><b>>>>応募方法</b><br>メールに添付、もしくはtwitterからDMにてお送りください。写真とともに、お名前（ニッネーム可）をお書きください。
+ (入賞時賞品発送の際には、本名・住所・電話番号をお聞きします。）</p>
   </div>
 
 <div class = "box4"><p><b>>>>応募作品について</b><br>御自分で撮影なさった写真をお送りください。被写体は、花、物、風景、動物など、内容は問いません。見た人が癒されるような素敵な写真をお願いします。人物が入る場合には、対象者のかたにこのコンテストに出す旨の確認をお願いします。</p>
