--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   「賞品」クオカード３０００円分か５０００円分（もしくは同額現金）</div>
 
 <div class = "box3"><p><b>>>>応募方法</b><br>メールに添付、もしくはtwitterからDMにてお送りください。写真とともに、お名前（ニッネーム可）をお書きください。
- (入賞時賞品発送の際には、本名・住所・電話番号をお聞きします。）</p>
+ (入賞時賞品発送の際には、本名・住所・電話番号をお聞きします。）メール:<a href="mailto:ikite2021@gmail.com">ikite2021@gmail.com</a></p>
   </div>
 
 <div class = "box4"><p><b>>>>応募作品について</b><br>御自分で撮影なさった写真をお送りください。被写体は、花、物、風景、動物など、内容は問いません。見た人が癒されるような素敵な写真をお願いします。人物が入る場合には、対象者のかたにこのコンテストに出す旨の確認をお願いします。</p>
@@ -52,7 +52,7 @@
      </div>
 <div class = "sns-wrapper">
   <div class = "container">
-    <div id = "btn1"><a href = "" target = "_blank" style = "text-decoration:none;">LINE窓口はこちら</a></div>
+    <div id = "btn1"></div>
   　<a href = "https://twitter.com/hirohir33105426" target = "_blank" style = "text-decoration:none;"><div id = "btn2">twitter窓口はこちら</div></a>
      </div>
       </div>
