--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <div class = "header">
    <div class = "container">
      <div class = "header-logo">いのちのフォトコンテスト<span id = "teck"> by Teck-Teck World</span></div>
-      <div class = "header-list">>>>お問い合わせ</div>
+      <div class = "header-list"><a href="mailto:ikite2021@gmail.com">ikite2021@gmail.com</a></div>
        </div></div>
        <hr size="3" color = "green">
 <div class = "top-wrapper">
@@ -29,19 +29,25 @@
     <div class = "heading">
       <h2>あなたが撮影した、素敵な写真を送ってください。</h2>
    </div>
-   <div class = "box1"><p><b>>>>概要</b><br>「いのちの相談窓口」では
+   <div class = "box1"><p><b>>>>コンテスト概要</b><br>「いのちの相談窓口」では今コンテストで
   皆様からの癒しの写真を募集し、入賞者には賞品を差し上げます。そして、
   入賞作品は「いのちの相談窓口」のテーマ画像とさせて頂き、ホームページなどで使用します。</div>
 
 <div class = "box2"><p><b>>>>日程</b><br>3か月にわたって開催します。
-  第一回締め切りは<b>２０２０年１２月２５日。</b>第二回締め切りは１月末日。第三回締め切りは２月末日。月ごとの入賞者数は、応募総数により決めさせて頂きます。<br>
+  第一回締め切りは<b>２０２０年１２月２５日。</b>第二回締め切りは１月末日。
+ 第三回締め切りは２月末日。月ごとの入賞者数は、応募総数により決めさせて頂きます。<br>
   「賞品」クオカード３０００円分か５０００円分（もしくは同額現金）</div>
 
-<div class = "box3"><p><b>>>>応募方法</b><br>メールに添付、もしくはtwitterからDMにてお送りください。写真とともに、お名前（ニッネーム可）をお書きください。
- (入賞時賞品発送の際には、本名・住所・電話番号をお聞きします。）メール:<a href="mailto:ikite2021@gmail.com">ikite2021@gmail.com</a></p>
+<div class = "box3"><p><b>>>>応募方法</b><br>メールに添付、もしくはtwitterからDMにてお送りください。
+ メールの場合、タイトルは「いのちのフォトコンテスト」としてください。
+ 写真とともに、お名前（ニッネーム可）をお書きください。
+ (入賞時賞品発送の際には、本名・住所・電話番号をお聞きします。）
+ メール:<a href="mailto:ikite2021@gmail.com">ikite2021@gmail.com</a></p>
   </div>
 
-<div class = "box4"><p><b>>>>応募作品について</b><br>御自分で撮影なさった写真をお送りください。被写体は、花、物、風景、動物など、内容は問いません。見た人が癒されるような素敵な写真をお願いします。人物が入る場合には、対象者のかたにこのコンテストに出す旨の確認をお願いします。</p>
+<div class = "box4"><p><b>>>>応募作品について</b><br>御自分で撮影なさった写真をお送りください。
+ 被写体は、花、物、風景、動物など、内容は問いません。見た人が癒されるような素敵な写真をお願いします。
+ 人物が入る場合には、対象者のかたにこのコンテストに出す旨の確認をお願いします。</p>
   </div>
  <div class = "box5"><p><b>>>>協力企業様募集中</b><br>「いのちの相談窓口」はTeck-Teck Worldが運営する完全ボランティア事業です。
   協力してくださる企業様、個人事業主様を募集しています。</p>
