--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   入賞作品は「いのちの相談窓口」のテーマ画像とさせて頂き、ホームページなどで使用します。</div>
 
 <div class = "box2"><p><b>>>>日程</b><br>3か月にわたって開催します。
-  第一回締め切りは<b>２０２０年１２月２５日。</b>第二回締め切りは１月末日。
+  <b><現在募集停止中></b>第一回締め切りは２０２０年１２月２５日。第二回締め切りは１月末日。
  第三回締め切りは２月末日。月ごとの入賞者数は、応募総数により決めさせて頂きます。<br>
   「賞品」クオカード３０００円分か５０００円分（もしくは同額現金）</div>
 
