--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
      <div class = "header-logo">いのちのフォトコンテスト<span id = "teck"> by Teck-Teck World</span></div>
       <div class = "header-list"><a href="mailto:ikite2021@gmail.com"　style="color:white;" id="ccc">ikite2021@gmail.com</a></div>
        </div></div>
+ <ul>
+<li>Teck-Teck World</li>
+<li>いのちの相談窓口</li>
+<li>飲食店応援企画</li>
+<li>SPONSOR</li>
+<li>イメージキャラクター</li>
+</ul>
+<br>
+
+<style>
+li{float:left;
+    padding-right:40px;
+   list-style:none;
+　　font-size:20px;
+}
+</style>
        <hr size="3" color = "green">
 <div class = "top-wrapper">
   <div class = "container">
