--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <div class = "header-list"><a href="mailto:ikite2021@gmail.com"　style="color:white;" id="ccc">ikite2021@gmail.com</a></div>
        </div></div>
  <ul>
-<li>Teck-Teck World</li>
-<li>いのちの相談窓口</li>
-<li>飲食店応援企画</li>
-<li>SPONSOR</li>
-<li>イメージキャラクター</li>
+<li><a href="https://hiro-eng.github.io/newteck/">Teck-Teck World</a></li>
+<li><a href="https://hiro-eng.github.io/ikite/">いのちの相談窓口</a></li>
+<li><a href="https://hiro-eng.github.io/tabetepc/">飲食店応援企画</a></li>
+<li>SPONSOR(準備中)</li>
+<li>イメージキャラクター(準備中)</li>
 </ul>
 <br>
 
