--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@ li{float:left;
    list-style:none;
 　　font-size:20px;
 }
+ ul{
+     text-align:center;
+     margin:auto;
+ }
+ 
 </style>
        <hr size="3" color = "green">
 <div class = "top-wrapper">
