--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ li{float:left;
     padding-right:40px;
    list-style:none;
 　　font-size:20px;
+  text-align:center;
 }
  ul{
      text-align:center;
