--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
      <div class = "header-logo">いのちのフォトコンテスト<span id = "teck"> by Teck-Teck World</span></div>
       <div class = "header-list"><a href="mailto:ikite2021@gmail.com"　style="color:white;" id="ccc">ikite2021@gmail.com</a></div>
        </div></div>
+ <div class="menu">
  <ul>
 <li><a href="https://hiro-eng.github.io/newteck/" style="text-decoration:none;" >Teck-Teck World</a></li>
 <li><a href="https://hiro-eng.github.io/ikite/" style="text-decoration:none;" >いのちの相談窓口</a></li>
 <li><a href="https://hiro-eng.github.io/tabetepc/" style="text-decoration:none;">飲食店応援企画</a></li>
 <li>イメージキャラクター(準備中)</li>
  <li>SPONSOR(準備中)</li>
-</ul>
+</ul></div>
 <br>
 
 <style>
@@ -30,11 +31,10 @@ li{float:left;
     padding-right:40px;
    list-style:none;
 　　font-size:20px;
-  text-align:center;
 }
- ul{
-     text-align:center;
+ .menu{
      margin:auto;
+     text-align:center;
  }
  
 </style>
