--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
      <div class = "header-logo">いのちのフォトコンテスト<span id = "teck"> by Teck-Teck World</span></div>
       <div class = "header-list"><a href="mailto:ikite2021@gmail.com"　style="color:white;" id="ccc">ikite2021@gmail.com</a></div>
        </div></div>
- <div class="menu">
+ <div class = "menu">
+  <div class = "container">
  <ul>
 <li><a href="https://hiro-eng.github.io/newteck/" style="text-decoration:none;" >Teck-Teck World</a></li>
 <li><a href="https://hiro-eng.github.io/ikite/" style="text-decoration:none;" >いのちの相談窓口</a></li>
 <li><a href="https://hiro-eng.github.io/tabetepc/" style="text-decoration:none;">飲食店応援企画</a></li>
 <li>イメージキャラクター(準備中)</li>
  <li>SPONSOR(準備中)</li>
-</ul></div>
+</ul></div></div>
 <br>
 
 <style>
