--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      <div class = "header-logo">いのちのフォトコンテスト<span id = "teck"> by Teck-Teck World</span></div>
       <div class = "header-list"><a href="mailto:ikite2021@gmail.com"　style="color:white;" id="ccc">ikite2021@gmail.com</a></div>
        </div></div>
+ 
  <div class = "menu">
   <div class = "container">
  <ul>
@@ -33,6 +34,11 @@ li{float:left;
    list-style:none;
 　　font-size:20px;
 }
+  ul{
+   text-align:center;
+ }
+ 
+ 
  .menu{
      margin:auto;
      text-align:center;
