--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
 <style>
 li{float:left;
     padding-right:40px;
-    margin:auto;
+    margin:auto auto;
    list-style:none;
 　　font-size:20px;
 }
   ul{
    text-align:center;
+   margin:auto auto;
  }
  
  
  .menu{
-     margin:auto;
+     margin:auto auto;
      text-align:center;
  }
  
