--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class = "header-list"><a href="mailto:ikite2021@gmail.com"　style="color:white;" id="ccc">ikite2021@gmail.com</a></div>
        </div></div>
  
- <div class = "menu">
+ <div class = "menu-wrapper">
   <div class = "container">
  <ul>
 <li><a href="https://hiro-eng.github.io/newteck/" style="text-decoration:none;" >Teck-Teck World</a></li>
@@ -25,11 +25,13 @@
 <li><a href="https://hiro-eng.github.io/tabetepc/" style="text-decoration:none;">飲食店応援企画</a></li>
 <li>イメージキャラクター(準備中)</li>
  <li>SPONSOR(準備中)</li>
-</ul></div></div>
+</ul>
+ </div></div>
 <br>
 
 <style>
 li{float:left;
+    text-align:center;
     padding-right:40px;
     margin:auto auto;
    list-style:none;
@@ -41,7 +43,7 @@ li{float:left;
  }
  
  
- .menu{
+ .menu-wrapper{
      margin:auto auto;
      text-align:center;
  }
