--- a/index.html
+++ b/index.html
@@ -31,20 +31,16 @@
 
 <style>
 li{float:left;
-    text-align:center;
     padding-right:40px;
-    margin:auto auto;
    list-style:none;
 　　font-size:20px;
 }
-  ul{
-   text-align:center;
-   margin:auto auto;
- }
  
  
  .menu-wrapper{
-     margin:auto auto;
+     width:800px
+     margin-right:auto;
+      margin-left:auto;
      text-align:center;
  }
  
