--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ li{float:left;
  
  
  .menu-wrapper{
-     width:800px
+     width:800px;
      margin-right:auto;
       margin-left:auto;
      text-align:center;
