--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ li{float:left;
 <div class = "sns-wrapper">
   <div class = "container">
     <div id = "btn1"></div>
-  　<a href = "https://twitter.com/hirohir33105426" target = "_blank" style = "text-decoration:none;"><div id = "btn2">twitter窓口はこちら</div></a>
+  　<a href = "https://twitter.com/SjoT2wArFFPsU12?s=09" target = "_blank" style = "text-decoration:none;"><div id = "btn2">twitter窓口はこちら</div></a>
      </div>
       </div>
        <div id = "T1"></div>
