--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <li><a href="https://hiro-eng.github.io/tabetepc/" style="text-decoration:none;">飲食店応援企画</a></li>
 <li><a href="https://hiro-eng.github.io/ikite/" style="text-decoration:none;" >いのちの相談窓口</a></li>
  <li><a href="https://hiro-eng.github.io/foto/" style="text-decoration:none;" >フォトコンテスト</a></li>
-<li>イメージキャラクター(準備中)</li>
+<li><a href="https://hiro-eng.github.io/mizuhoka/" style="text-decoration:none;" >イメージキャラクター</a></li>
  <li>SPONSOR(準備中)</li>
 </ul>
  </div></div>
