--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <div class = "menu-wrapper">
   <div class = "container">
  <ul>
-<li><a href="https://hiro-eng.github.io/newteck/" style="text-decoration:none;" >Teck-Teck World</a></li>
+<li><a href="https://hiro-eng.github.io/newteck/" style="text-decoration:none;" >HOME</a></li>
  <li><a href="https://hiro-eng.github.io/tabetepc/" style="text-decoration:none;">飲食店応援企画</a></li>
 <li><a href="https://hiro-eng.github.io/ikite/" style="text-decoration:none;" >いのちの相談窓口</a></li>
  <li><a href="https://hiro-eng.github.io/foto/" style="text-decoration:none;" >フォトコンテスト</a></li>
